fix alignfull class on cover blocks

--- a/assets/scss/main/_gutenberg.scss
+++ b/assets/scss/main/_gutenberg.scss
@@ -1,13 +1,13 @@
 //<editor-fold desc="Gutenberg alignments">
 
-.alignfull {
+#content .alignfull {
   width: 100vw;
   max-width: 100vw;
   margin-left: calc(50% - 50vw);
   padding: 0 15px;
 }
 
-.alignwide {
+#content .alignwide {
   width: 70vw;
   max-width: 70vw;
   margin-left: calc(50% - 35vw);
@@ -16,9 +16,11 @@
 body {
   &.nv-sidebar-left,
   &.nv-sidebar-right {
-	.alignfull, .alignwide {
-	  max-width: 100%;
-	  margin-left: auto;
+	#content {
+	  .alignfull, .alignwide {
+		max-width: 100%;
+		margin-left: auto;
+	  }
 	}
   }
 }
